@startuml

title __LOOPS's Class Diagram__\n

  namespace loops {
      class loops.GameLoop {
          + GameLoop()
          + actionPerformed()
      }
      class loops.GhostLoop {
          - counter : int
          - startTime : long
          - timeLost : long
          - times : long[]
          + GhostLoop()
          + actionPerformed()
          + resetTimeLost()
      }
      class loops.PacmanLoop {
          + PacmanLoop()
          + actionPerformed()
      }
    }

  loops.GameLoop .up.|> java.awt.event.ActionListener
  loops.GhostLoop .up.|> java.awt.event.ActionListener
  loops.PacmanLoop .up.|> java.awt.event.ActionListener
  sprites.Ghost o-- loops.GhostLoop : ghostLoop
  sprites.Pacman o-- loops.PacmanLoop : timer.getActionListeners()
  logic.GameLogic o-- loops.GameLoop : timer.getActionListeners()

@enduml
